fixing z-index

--- a/final/final.css
+++ b/final/final.css
@@ -264,14 +264,16 @@ body{
 	top: 0px;
 	background-color: #D5D7D7;
 	width: 100%;
-	height: 50px;}
+	height: 50px;
+	z-index:100;
+}
 
 
 #content-wrapper{
 	background-color:#333333;
 	width: 100%;
 	height:1030px;
-	z-index:100;
+	z-index:1;
 }
 
 #main-menu li  a{        
